# reversible_turing_machine

./: CHANGELOG.md  README.md  bb4.txt  entrada-quintupla.txt  package.yaml  revturing.cabal  saida.txt
app/: Main.hs
definitions/: entrada-quintupla.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: package.cache  revturing-0.1.0.0-inplace.conf
src/: Lib.hs  Log.hs  Machine.hs  Reader.hs  Utils.hs
src/Turing/: Action.hs  Machine.hs  Quadruple.hs  Quintuple.hs  Reader.hs  State.hs  Symbol.hs
src/Turing/Basic/: Action.hs  Direction.hs  State.hs  Symbol.hs
src/Turing/Machine/: ClassicMachine.hs  Conversor.hs  Machine.hs  RevMachine.hs
src/Turing/Tape/: RevTape.hs  Tape.hs  TripleTape.hs
src/Turing/Tape/Basic/: Action.hs  Direction.hs  GenericTape.hs  Tape.hs
src/Turing/Transition/: Conversor.hs  Transition.hs  Transition4.hs  Transition5.hs
