cabal-version: 1.12

name:           revturing
version:        0.1.0.0

build-type:     Simple

library
  exposed-modules:
      Turing.Basic.Action
      Turing.Basic.Direction
      Turing.Basic.State
      Turing.Basic.Symbol
      Turing.Machine.ClassicMachine
      Turing.Machine.Conversor
      Turing.Machine.Machine
      Turing.Machine.RevMachine
      Turing.Reader
      Turing.Tape.RevTape
      Turing.Tape.Tape
      Turing.Tape.TripleTape
      Turing.Transition.Conversor
      Turing.Transition.Transition
      Turing.Transition.Transition4
      Turing.Transition.Transition5
      Utils

  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , mtl
  default-language: Haskell2010

executable revturing-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , revturing
  default-language: Haskell2010
